tools/sddl2/assembler/tests/success/push_zero_and_u32.asm
push.zero
push.u32 42
halt
