tools/sddl2/assembler/tests/fail/push_zero_with_param.asm
# EXPECT-ERROR: unknown instruction
push.zero 42
halt
